[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/menu/settings_menu/SettingsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/pause_menu/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/special/ConcertOne-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 52
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_bottom = 9
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 23
extra_spacing_bottom = 9
font_data = SubResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "color_fade"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TitleLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 5, 7, 9, 11, 13, 15, 17, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.937255, 0.505882, 0.505882, 1 ), Color( 0.945098, 0.831373, 0.494118, 1 ), Color( 0.713726, 0.952941, 0.533333, 1 ), Color( 0.568627, 0.87451, 0.658824, 1 ), Color( 0.541176, 0.901961, 0.878431, 1 ), Color( 0.431373, 0.580392, 0.862745, 1 ), Color( 0.862745, 0.427451, 0.784314, 1 ), Color( 0.777778, 0.416993, 0.839216, 1 ), Color( 0.890196, 0.407843, 0.588235, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TitleLabel" type="Label" parent="."]
modulate = Color( 0.888889, 0.406536, 0.815686, 1 )
margin_right = 1024.0
margin_bottom = 227.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.376471, 0.376471, 0.168627 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "PAUSE MENU"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="SettingsMenu" parent="." instance=ExtResource( 1 )]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="PauseMenuContainer" type="CenterContainer" parent="."]
margin_right = 1026.0
margin_bottom = 604.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuContainer"]
margin_left = 444.0
margin_top = 247.0
margin_right = 582.0
margin_bottom = 357.0

[node name="ResumeButton" type="Button" parent="PauseMenuContainer/VBoxContainer"]
margin_right = 138.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "RESUME"

[node name="SettingsButton" type="Button" parent="PauseMenuContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 138.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"

[node name="MenuButton" type="Button" parent="PauseMenuContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 138.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 2 )
text = "GO TO MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/color_fade = SubResource( 4 )

[connection signal="back" from="SettingsMenu" to="." method="_on_SettingsMenu_back"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
